--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     }
   ],
   "require": {
-    "illuminate/cache": ">=5.0"
+    "illuminate/cache": ">=5.0",
+    "illuminate/database": ">=5.0"
   },
   "autoload": {
     "psr-4": {
