--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,13 @@
   ],
   "require": {
     "illuminate/cache": ">=5.0",
-    "illuminate/database": ">=5.0"
+    "illuminate/database": ">=5.0",
+    "illuminate/events": ">=5.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": ">=4.0",
+    "orchestra/testbench": "^3.0",
+    "mockery/mockery": "^1.1"
   },
   "autoload": {
     "psr-4": {
@@ -19,6 +25,11 @@
     "files": [
       "src/helpers.php"
     ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Michaeljennings\\Broker\\Tests\\": "tests/"
+    }
   },
   "minimum-stability": "stable"
 }
