--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   "require-dev": {
     "phpunit/phpunit": ">=4.0",
     "orchestra/testbench": "^3.0",
-    "mockery/mockery": "^1.1"
+    "mockery/mockery": "^1.1",
+    "php-coveralls/php-coveralls": "^2.1"
   },
   "autoload": {
     "psr-4": {
