--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
   "require": {
     "illuminate/cache": ">=5.0",
     "illuminate/database": ">=5.0",
-    "illuminate/events": ">=5.0"
+    "illuminate/events": ">=5.0",
+    "nesbot/carbon": "^1.0|^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=4.0",
-    "orchestra/testbench": "^3.0",
     "mockery/mockery": "^1.0",
+    "orchestra/testbench": ">=3.0",
+    "phpunit/phpunit": ">=4.0",
     "php-coveralls/php-coveralls": "^2.1"
   },
   "autoload": {
@@ -41,6 +42,9 @@
         "Broker": "Michaeljennings\\Broker\\Facades\\Broker"
       }
     }
+  },
+  "config": {
+    "sort-packages": true
   },
   "minimum-stability": "stable"
 }
